Added resources for general strings in german and english

--- a/PenAndPaperInterface/PAPIClasses/PAPIClasses.csproj
+++ b/PenAndPaperInterface/PAPIClasses/PAPIClasses.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Update="PAPIStringsEN.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>PAPIStringsEN.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="PAPIStringsEN.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>PAPIStringsEN.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
