--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -163,6 +163,18 @@
       <DependentUpon>ArchetypesAndSpecies_EN.resx</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Views\CreateNewGameView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\CreateNewGameView.Designer.cs">
+      <DependentUpon>CreateNewGameView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PAPIPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PAPIPopup.Designer.cs">
+      <DependentUpon>PAPIPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SelectGameView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -188,6 +200,12 @@
     </Compile>
     <Compile Include="Views\PAPIView.Designer.cs">
       <DependentUpon>PAPIView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ShowGamePopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ShowGamePopup.Designer.cs">
+      <DependentUpon>ShowGamePopup.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
