--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -175,6 +175,12 @@
     <Compile Include="Views\PAPIPopup.Designer.cs">
       <DependentUpon>PAPIPopup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\PlayerSearchPopup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PlayerSearchPopup.Designer.cs">
+      <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SelectGameView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -285,6 +291,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ArchetypesAndSpecies_EN.Designer.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\CreateNewGameView.resx">
+      <DependentUpon>CreateNewGameView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\GMOptionsView.resx">
       <DependentUpon>GMOptionsView.cs</DependentUpon>
