Finished recherche for Client-Server architecture, implemented it with TcpServer and TcpClient, tested on same machine and sent and received player

--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -317,6 +317,9 @@
     <EmbeddedResource Include="Views\PAPIView.resx">
       <DependentUpon>PAPIView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\PlayerSearchPopup.resx">
+      <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\SelectGameView.resx">
       <DependentUpon>SelectGameView.cs</DependentUpon>
     </EmbeddedResource>
