--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -93,48 +93,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\PAPIServer.cs" />
     <Compile Include="Server\PendingMessages.cs" />
-    <Compile Include="Strings\AbilitiesAndTalents_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>AbilitiesAndTalents_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Careers_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Careers_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\CharacterFields_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CharacterFields_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Characteristics_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Characteristics_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Colors_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Colors_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\CriticalInjuries_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CriticalInjuries_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\DiceAndSymbols_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DiceAndSymbols_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
     <Compile Include="Strings\General_DE.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -145,36 +103,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>General_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\ItemQualities_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ItemQualities_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Items_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Items_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Motivations_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Motivations_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\Skills_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Skills_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\ArchetypesAndSpecies_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>ArchetypesAndSpecies_EN.resx</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Views\GameCreationView.cs">
@@ -238,41 +166,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Strings\AbilitiesAndTalents_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>AbilitiesAndTalents_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Careers_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Careers_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\CharacterFields_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>CharacterFields_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Characteristics_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Characteristics_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Colors_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Colors_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\CriticalInjuries_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>CriticalInjuries_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\DiceAndSymbols_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>DiceAndSymbols_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
     <EmbeddedResource Include="Strings\General_DE.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>General_DE.Designer.cs</LastGenOutput>
@@ -281,31 +174,6 @@
     <EmbeddedResource Include="Strings\General_EN.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>General_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\ItemQualities_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ItemQualities_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Items_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Items_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Motivations_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Motivations_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\Skills_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Skills_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\ArchetypesAndSpecies_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>ArchetypesAndSpecies_EN.Designer.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\GameCreationView.resx">
@@ -349,6 +217,10 @@
   <ItemGroup>
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Images\medieval_show.bmp" />
+    <Content Include="Resources\Images\modern_show.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
