Created Link from Create Game Button of CreateGameView to GameView, finished task

--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -111,6 +111,12 @@
     <Compile Include="Views\GameCreationView.Designer.cs">
       <DependentUpon>GameCreationView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\GameView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\GameView.Designer.cs">
+      <DependentUpon>GameView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\PAPIPopup.cs">
       <SubType>Form</SubType>
     </Compile>
