--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ gen/
 out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
+*.dtbcache.v2
+*.suo
 
 # Gradle files
 .gradle/
