--- a/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/GameMasterPAPI.csproj
@@ -105,16 +105,22 @@
       <DependentUpon>General_EN.resx</DependentUpon>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="Views\GameCreationView.cs">
+    <Compile Include="Views\Popups\DeleteGamePromptPopup.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\GameCreationView.Designer.cs">
+    <Compile Include="Views\Popups\DeleteGamePromptPopup.Designer.cs">
+      <DependentUpon>DeleteGamePromptPopup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Views\GameCreationView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Views\GameCreationView.Designer.cs">
       <DependentUpon>GameCreationView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\GameView.cs">
+    <Compile Include="Views\Views\GameView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\GameView.Designer.cs">
+    <Compile Include="Views\Views\GameView.Designer.cs">
       <DependentUpon>GameView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\PAPIPopup.cs">
@@ -123,28 +129,28 @@
     <Compile Include="Views\PAPIPopup.Designer.cs">
       <DependentUpon>PAPIPopup.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\PlayerSearchPopup.cs">
+    <Compile Include="Views\Popups\PlayerSearchPopup.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\PlayerSearchPopup.Designer.cs">
+    <Compile Include="Views\Popups\PlayerSearchPopup.Designer.cs">
       <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\GameSelectionView.cs">
+    <Compile Include="Views\Views\GameSelectionView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\GameSelectionView.Designer.cs">
+    <Compile Include="Views\Views\GameSelectionView.Designer.cs">
       <DependentUpon>GameSelectionView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\GMOptionsView.cs">
+    <Compile Include="Views\Views\GMOptionsView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\GMOptionsView.Designer.cs">
+    <Compile Include="Views\Views\GMOptionsView.Designer.cs">
       <DependentUpon>GMOptionsView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\GMStartView.cs">
+    <Compile Include="Views\Views\GMStartView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\GMStartView.Designer.cs">
+    <Compile Include="Views\Views\GMStartView.Designer.cs">
       <DependentUpon>GMStartView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\IPAPIView.cs" />
@@ -155,10 +161,10 @@
     <Compile Include="Views\PAPIView.Designer.cs">
       <DependentUpon>PAPIView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\ShowGameOverviewPopup.cs">
+    <Compile Include="Views\Popups\ShowGameOverviewPopup.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\ShowGameOverviewPopup.Designer.cs">
+    <Compile Include="Views\Popups\ShowGameOverviewPopup.Designer.cs">
       <DependentUpon>ShowGameOverviewPopup.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\TableLayoutHelper.cs" />
@@ -176,28 +182,36 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>General_DE.Designer.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Strings\General_EN.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>General_EN.Designer.cs</LastGenOutput>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\GameCreationView.resx">
+    <EmbeddedResource Include="Views\Popups\DeleteGamePromptPopup.resx">
+      <DependentUpon>DeleteGamePromptPopup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Popups\ShowGameOverviewPopup.resx">
+      <DependentUpon>ShowGameOverviewPopup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Views\GameCreationView.resx">
       <DependentUpon>GameCreationView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\GMOptionsView.resx">
+    <EmbeddedResource Include="Views\Views\GMOptionsView.resx">
       <DependentUpon>GMOptionsView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\GMStartView.resx">
+    <EmbeddedResource Include="Views\Views\GMStartView.resx">
       <DependentUpon>GMStartView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\PAPIView.resx">
       <DependentUpon>PAPIView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\PlayerSearchPopup.resx">
+    <EmbeddedResource Include="Views\Popups\PlayerSearchPopup.resx">
       <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\GameSelectionView.resx">
+    <EmbeddedResource Include="Views\Views\GameSelectionView.resx">
       <DependentUpon>GameSelectionView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
