Refactored Views for new Software Design

--- a/PenAndPaperInterface/PAPITests/PAPITests.csproj
+++ b/PenAndPaperInterface/PAPITests/PAPITests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GameMasterPAPI\GameMasterPAPI.csproj" />
+    <ProjectReference Include="..\GameMasterPAPI\PAPIClient.csproj" />
     <ProjectReference Include="..\PAPIClasses\PAPIClasses.csproj" />
     <ProjectReference Include="..\TextClient\TestClient.csproj" />
   </ItemGroup>
