--- a/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
@@ -96,18 +96,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\PAPIServer.cs" />
     <Compile Include="Server\PendingMessages.cs" />
-    <Compile Include="Strings\General_DE.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>General_DE.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
-    <Compile Include="Strings\General_EN.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>General_EN.resx</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Compile>
     <Compile Include="Views\Popups\DeleteGamePromptPopup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,12 +107,6 @@
     </Compile>
     <Compile Include="Views\Views\GameCreationView.Designer.cs">
       <DependentUpon>GameCreationView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Views\GameView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\Views\GameView.Designer.cs">
-      <DependentUpon>GameView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\PAPIPopup.cs">
       <SubType>Form</SubType>
@@ -144,17 +126,23 @@
     <Compile Include="Views\Views\GameSelectionView.Designer.cs">
       <DependentUpon>GameSelectionView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Views\GMOptionsView.cs">
+    <Compile Include="Views\Views\OptionsView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Views\GMOptionsView.Designer.cs">
-      <DependentUpon>GMOptionsView.cs</DependentUpon>
+    <Compile Include="Views\Views\OptionsView.Designer.cs">
+      <DependentUpon>OptionsView.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\Views\GMStartView.cs">
+    <Compile Include="Views\Views\StartView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\Views\GMStartView.Designer.cs">
-      <DependentUpon>GMStartView.cs</DependentUpon>
+    <Compile Include="Views\Views\StartView.Designer.cs">
+      <DependentUpon>StartView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Views\WelcomeView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Views\WelcomeView.Designer.cs">
+      <DependentUpon>WelcomeView.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\IPAPIView.cs" />
     <Compile Include="Views\ITranslatableView.cs" />
@@ -181,18 +169,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Strings\General_DE.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>General_DE.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings\General_EN.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>General_EN.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\Popups\DeleteGamePromptPopup.resx">
       <DependentUpon>DeleteGamePromptPopup.cs</DependentUpon>
     </EmbeddedResource>
@@ -202,11 +178,11 @@
     <EmbeddedResource Include="Views\Views\GameCreationView.resx">
       <DependentUpon>GameCreationView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Views\GMOptionsView.resx">
-      <DependentUpon>GMOptionsView.cs</DependentUpon>
+    <EmbeddedResource Include="Views\Views\OptionsView.resx">
+      <DependentUpon>OptionsView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Views\Views\GMStartView.resx">
-      <DependentUpon>GMStartView.cs</DependentUpon>
+    <EmbeddedResource Include="Views\Views\WelcomeView.resx">
+      <DependentUpon>WelcomeView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\PAPIView.resx">
       <DependentUpon>PAPIView.cs</DependentUpon>
