--- a/PenAndPaperInterface/PAPIClasses/PAPIClasses.csproj
+++ b/PenAndPaperInterface/PAPIClasses/PAPIClasses.csproj
@@ -14,6 +14,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>PAPIStringsEN.resx</DependentUpon>
     </Compile>
+    <Compile Update="Resources\Strings_DE.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings_DE.resx</DependentUpon>
+    </Compile>
     <Compile Update="Resources\Strings_EN.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
