Created the start view, added english translations, added button functionality

--- a/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
@@ -181,6 +181,9 @@
     <EmbeddedResource Include="Views\Views\OptionsView.resx">
       <DependentUpon>OptionsView.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Views\StartView.resx">
+      <DependentUpon>StartView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Views\WelcomeView.resx">
       <DependentUpon>WelcomeView.cs</DependentUpon>
     </EmbeddedResource>
