--- a/PenAndPaperInterface/SaveFiles/settings.json
+++ b/PenAndPaperInterface/SaveFiles/settings.json
@@ -1,1 +1,1 @@
-[{"_activeDesign":1,"_activeLanguage":0,"_isSessionRunning":false,"_player":{"_name":"Jamie","_ip":"172.25.32.1"}},{"_activeDesign":1,"_activeLanguage":0,"_isSessionRunning":false,"_player":{"_name":"Jamie","_ip":"172.25.32.1"}}]
+[{"_activeDesign":2,"_activeLanguage":0,"_isSessionRunning":false,"_player":{"_name":"Jamie","_ip":"172.25.32.1"}},{"_activeDesign":2,"_activeLanguage":0,"_isSessionRunning":false,"_player":{"_name":"Jamie","_ip":"172.25.32.1"}},{"_activeDesign":2,"_activeLanguage":0,"_isSessionRunning":false,"_player":{"_name":"Jamie","_ip":"172.25.32.1"}}]
