--- a/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
+++ b/PenAndPaperInterface/GameMasterPAPI/PAPIClient.csproj
@@ -96,12 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server\PAPIServer.cs" />
     <Compile Include="Server\PendingMessages.cs" />
-    <Compile Include="Views\Popups\DeleteGamePromptPopup.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\Popups\DeleteGamePromptPopup.Designer.cs">
-      <DependentUpon>DeleteGamePromptPopup.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Views\Views\Components\GameSelectionTableRow.cs" />
     <Compile Include="Views\Views\GameCreationView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,12 +108,6 @@
     </Compile>
     <Compile Include="Views\PAPIPopup.Designer.cs">
       <DependentUpon>PAPIPopup.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Popups\PlayerSearchPopup.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\Popups\PlayerSearchPopup.Designer.cs">
-      <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\Views\GameSelectionView.cs">
       <SubType>Form</SubType>
@@ -169,9 +158,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Views\Popups\DeleteGamePromptPopup.resx">
-      <DependentUpon>DeleteGamePromptPopup.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Views\Views\ShowGameOverviewView.resx">
       <DependentUpon>ShowGameOverviewView.cs</DependentUpon>
     </EmbeddedResource>
@@ -189,9 +175,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\PAPIView.resx">
       <DependentUpon>PAPIView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\Popups\PlayerSearchPopup.resx">
-      <DependentUpon>PlayerSearchPopup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Views\GameSelectionView.resx">
       <DependentUpon>GameSelectionView.cs</DependentUpon>
